2016-01-08  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted (cf. Jun T.: 37516): Src/builtin.c: refine READ_MSTREAM
	to avoid unsequenced evaluation

2016-01-06  Barton E. Schaefer  <schaefer@zsh.org>

	* 37513 (cf. Jun T.: 37508): Src/builtin.c: fix typos; improve
	error cleanup in tempfile case of ASSIGN_MSTREAM(); simplify
	READ_MSTREAM() and correct for signed/unsigned compiler warning

2016-01-04  Barton E. Schaefer  <schaefer@zsh.org>

	* 37504: Src/builtin.c: refactor code using/simulating memstream
	to capture output for "print -v"

	* 37503: Src/builtin.c: detect incompatible "print" options, fix
	metafication and possible memory leak, miscellaneous cosmetics

	* Jun T. (+ revise test): 37501: Src/builtin.c, Test/B03print.ztst:
	correct byte counts when simulating memstream via temp file

2016-01-02  Barton E. Schaefer  <schaefer@zsh.org>

	* 37497: Src/builtin.c: handle NUL bytes in "printf -v".

	* 37493: Doc/Zsh/builtins.yo, Src/builtin.c, Src/hashtable.h,
	Test/B02typeset.ztst: readonly + POSIX_BUILTINS == typeset -gr

2016-01-01  Barton E. Schaefer  <schaefer@zsh.org>

	* 37483: Src/glob.c: save and possibly restore cshnullglob failure
	state around each evaluation of an (e:...:) glob qualifier.

	* 37473: Src/exec.c: check for cshnullglob in command position.

2015-12-31  Barton E. Schaefer  <schaefer@zsh.org>

	* 37469: Src/parse.c: do NOT allow semicolons in place of line breaks
	in conditionals

	* unposted:  Src/builtin.c: enable WARN_CREATE_GLOBAL for print -v

	* 37468: Src/parse.c: allow line breaks in more places in [[ ... ]]

	* 37467: Doc/Zsh/builtins.yo, Src/builtin.c, Test/B03print.ztst:
	add "print -v var" / "printf -v var"

2015-12-31  Oliver Kiddle  <opk@zsh.org>

	* 37453 (with Bart, started by Baptiste Daroussin, 37315)
	Test/C02cond.ztst: try to improve detection of noatime filesystem

	* users/21114: Completion/Unix/Command/_dig: new completion

2015-12-30  Barton E. Schaefer  <schaefer@zsh.org>
